# hindsight

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  vercel.json
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: index.py  requirements.txt
backend/app/: __init__.py  cognee_client.py  main.py  models.py  seed.py
backend/tests/: test_api.py
docs/: BLOG.md  DEMO.md  SOCIAL.md  SUBMISSION.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: GraphView.jsx  IngestPanel.jsx  MemoryPanel.jsx  RecallPanel.jsx  RecapModal.jsx
