[project]
name = "hindsight-backend"
version = "0.1.0"
description = "FastAPI service exposing the Cognee memory lifecycle for Hindsight."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Ruff defaults (E4/E7/E9 + pyflakes) plus import sorting.
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
